fix: add spacing for saved link in nav bar

--- a/static/style.css
+++ b/static/style.css
@@ -228,6 +228,11 @@ figcaption {
     text-align: center;
 }
 
+#saved_link {
+    opacity: 0.8;
+    margin-left: 10px;
+}
+
 #settings_link {
     opacity: 0.8;
     margin-left: 10px;
